<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.david.journalapp.signup.SignUpFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_mail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/til_name"
        app:layout_constraintStart_toStartOf="@+id/til_name"
        app:layout_constraintTop_toBottomOf="@+id/til_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ed_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_mail"
            android:maxLines="1"
            android:inputType="textEmailAddress" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/hint_password"
        app:layout_constraintEnd_toEndOf="@+id/til_mail"
        app:layout_constraintStart_toStartOf="@+id/til_mail"
        app:layout_constraintTop_toBottomOf="@+id/til_mail">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ed_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/hint_password" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btn_create_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/btn_create"
        android:background="@drawable/rectangle_button"
        app:layout_constraintEnd_toEndOf="@+id/til_password"
        app:layout_constraintTop_toBottomOf="@+id/til_password" />

    <Button
        android:id="@+id/btn_signup_with_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/common_google_signin_btn_icon_light_normal"
        android:gravity="start|center"
        android:text="@string/btn_signup_with_google"
        android:textAlignment="textStart"
        android:background="@drawable/rectangle_login_with_google"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ed_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>
