<resources>
    <string name="app_name">Journal App</string>
    <string name="welcome_greeting">Hello Diary !</string>
    <string name="welcome_note">Ready to get your feeling and thoughts at one place?</string>
    <string name="btn_login">Log in</string>
    <string name="btn_signup">Sign up</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
...
